@@ -60,7 +60,7 @@ andere Flieger Ihre eigenen, ganz speziellen Vorliegen für einen Schnellzugriff
 Auch, falls dem PDA mal  die Batterie ausgeht, ist zur schnellen Wiederherstellung der persöhnlichen
 Einstellungen wenigestens das Sichern eines solchen Files eine große Hilfe.
 
-Falls ein oder mehrerer Konfigurationsfiles \verb''xcsoar-registry.prf''  bestehen, so wird beim Start als allererstes nach
+Falls ein oder mehrerer Konfigurationsfiles \verb''default.prf''  bestehen, so wird beim Start als allererstes nach
 einem dieser Files zur Auswahl gefragt.
 
 Im Kap.~\ref{cha:data-files} werden die diversen Formate dieser Files mit ihren
