@@ -290,7 +290,7 @@ Einstellungen in \xc überschrieben. Alle anderen Einstellungen bleiben erhalten
 Ein Standard-Profil wird grundsätzlich automatisch von  \xc erstellt, in dem Moment, da
 die Konfigurationseinstellungen abgespeichert oder geändert werden.
 
-Dies File hat den Namen  \verb|xcsoar-registry.prf|.
+Dies File hat den Namen  \verb|default.prf|.
 
 Der einfachste Weg, ein neues Profil zu erzeugen ist, ein altes Profil unter einem neuen
 Namen jedoch mit derselben Endung abzuspeichern. Bei nächsten Start von \xc  fragt dann das Programm, welches der vorhandenen Profil-Files benutzt werden soll.
