@@ -180,7 +180,7 @@ Diese werden ebenfalls im \texttt{XCSoarData} Verzeichnis (Windows PC und Window
 Verzeichnis(Unix/LinuxPC) abgelegt. 
 
 Beim ersten Start wird {\textsf  XCSoar}  folgende Files erzeugen und anlegen: 
-\texttt{Default.tsk} (Standard Aufgabe),  \texttt{xcsoar-registry.prf} (Konfigurationseinstellungen), \texttt{xcsoar-startup.log} 
+\texttt{Default.tsk} (Standard Aufgabe),  \texttt{default.prf} (Konfigurationseinstellungen), \texttt{xcsoar-startup.log} 
 (Ein Log-Schrieb des Startprozesses von {\textsf  XCSoar}\dots), 
 
 
