@@ -245,7 +245,7 @@ unaffected.
 
 The default profile file is generated automatically when configuration
 settings are changed or when the program exits; this has the
-file name \verb|xcsoar-registry.prf|.
+file name \verb|default.prf|.
 
 The easiest way to create a new profile is to copy a previous one,
 such as the default profile.  Copy the file, give it a logical name,
