@@ -206,7 +206,7 @@ XCSoar will generate a number of additional files at run time.  These
 will be placed in the  \texttt{XCSoarData} directory (Windows PC and 
 Windows Mobile devices), or the \texttt{.xcsoar} directory (Unix/Linux
 PC).  At first run, XCSoar will create the files 
-\texttt{Default.tsk} (Default Task),  \texttt{xcsoar-registry.prf} 
+\texttt{Default.tsk} (Default Task),  \texttt{default.prf} 
 (configuration settings), \newline
 \texttt{xcsoar-startup.log} (log of the startup progress), 
 plus three directories: \texttt{cache},
