@@ -188,7 +188,7 @@ Quand un profile est sauvegardé, il contient tout les paramètres de configurat
 
 Quand un fichier de profile est chargé, seuls les paramètres de ce fichier sont chargés et surchargent les paramètres internes de XCSoar : tous les autres paramètres sont inchangés.
 
-Le fichier de paramètres par défaut est crée automatiquement quand des paramètres sont modifiés ou à la sortie du programme : le nom du fichier est \verb|xcsoar-registry.prf|.
+Le fichier de paramètres par défaut est crée automatiquement quand des paramètres sont modifiés ou à la sortie du programme : le nom du fichier est \verb|default.prf|.
 
 La façon la plus simple de créer un nouveau profile est de copier le fichier par défaut et de lui donner un nom logique. Au redémarrage du programme, il est alors possible de sélectionner l'un des fichiers profile existants.
 
