@@ -52,6 +52,8 @@ Version 6.7 - not yet released
 * Analysis
   - a retrospective task is compiled that summarises waypoints the aircraft has 
     visited (within 15km radius).  These waypoints are drawn on OLC page of analysis dialog.
+* data files
+  - default profile is called "default.prf" instead of "xcsoar-registry.prf"
 
 Version 6.6.5 - not yet released
 * map
